--- a/index.html
+++ b/index.html
@@ -2,69 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Record Suspension – John Howard Society Miramichi</title>
+  <title>Record Suspension Help – JHSM</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      color: #fff;
-      background: url('compass.png') no-repeat center center fixed;
+      padding: 0;
+      background-image: url('compass.png');
       background-size: cover;
-      text-shadow: 1px 1px 3px #000;
-    }
-
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.6); /* dark overlay for readability */
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: 0 auto;
-      min-height: 100vh;
+      background-position: center;
+      background-repeat: no-repeat;
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      min-height: 100vh;
+      background-color: #000; /* fallback for no image */
     }
 
-    h1, h2 {
-      text-align: center;
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 2em;
+      border-radius: 12px;
+      margin: 2em;
     }
 
-    ul {
-      list-style-type: disc;
-      padding-left: 20px;
+    h1, h2, p {
+      margin: 0.5em 0;
     }
 
-    .contact {
-      margin-top: 30px;
-      font-size: 1.1em;
-      line-height: 1.6;
+    a.button {
+      display: inline-block;
+      margin-top: 1em;
+      padding: 0.75em 1.5em;
+      background-color: #2a9d8f;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
     }
 
-    a {
-      color: #aad4ff;
+    a.button:hover {
+      background-color: #21867a;
+    }
+
+    @media (max-width: 600px) {
+      .overlay {
+        margin: 1em;
+        padding: 1em;
+      }
     }
   </style>
 </head>
 <body>
   <div class="overlay">
-    <h1>Record Suspension</h1>
-    <h2>Previously known as a Pardon</h2>
-    <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you with the Record Suspension application.</p>
-
-    <p><strong>For qualifying ex-offenders:</strong></p>
-    <ul>
-      <li>One-on-one assistance</li>
-      <li>Eligibility assessment</li>
-      <li>Cost-related supports</li>
-      <li>Help in both official languages</li>
-    </ul>
-
-    <div class="contact">
-      <p><strong>Contact:</strong> Ed Rawlinson, Navigator</p>
-      <p>599 King George Hwy, Miramichi, NB E1V 1N9</p>
-      <p>Phone: 506-625-5609</p>
-      <p>Email: <a href="mailto:jerawlinson@gmail.com">jerawlinson@gmail.com</a></p>
-    </div>
-  </div>
-</body>
-</html>
+    <h1>Need a Record Suspension (Pardon)?</h1>
+    <h2>We Can Help – For Free</h2>
+    <p>The John Howard Society
