--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Record Suspension – John Howard Society Miramichi</title>
   <style>
     body {
@@ -23,15 +23,19 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-    }
-
-    h1, h2 {
-      text-align: center;
+      text-align: center; /* CENTER ALL TEXT */
     }
 
     ul {
       list-style-type: disc;
-      padding-left: 20px;
+      padding-left: 0;
+      margin: 0 auto;
+      display: inline-block;
+      text-align: left; /* keep bullets aligned but list centered */
+    }
+
+    li {
+      text-align: center;
     }
 
     .contact {
@@ -49,9 +53,11 @@
   <div class="overlay">
     <h1>Record Suspension</h1>
     <h2>Previously known as a Pardon</h2>
+
     <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you with the Record Suspension application.</p>
 
     <p><strong>For qualifying ex-offenders:</strong></p>
+
     <ul>
       <li>One-on-one assistance</li>
       <li>Eligibility assessment</li>
