--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       background: url('compass.png') no-repeat center center fixed;
       background-size: cover;
       text-shadow: 1px 1px 3px #000;
+      text-align: center; /* This makes all text center-aligned by default */
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.6); /* dark overlay for readability */
+      background-color: rgba(0, 0, 0, 0.6);
       padding: 40px 20px;
       max-width: 800px;
       margin: 0 auto;
@@ -23,19 +24,18 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      text-align: center; /* CENTER ALL TEXT */
+      align-items: center; /* Center inner block elements */
     }
 
     ul {
       list-style-type: disc;
       padding-left: 0;
-      margin: 0 auto;
-      display: inline-block;
-      text-align: left; /* keep bullets aligned but list centered */
+      text-align: center;
     }
 
-    li {
-      text-align: center;
+    ul li {
+      display: list-item;
+      list-style-position: inside;
     }
 
     .contact {
@@ -53,11 +53,9 @@
   <div class="overlay">
     <h1>Record Suspension</h1>
     <h2>Previously known as a Pardon</h2>
-
     <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you with the Record Suspension application.</p>
 
     <p><strong>For qualifying ex-offenders:</strong></p>
-
     <ul>
       <li>One-on-one assistance</li>
       <li>Eligibility assessment</li>
