--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="overlay">
     <h1>Record Suspension</h1>
     <h2>Previously known as a Pardon</h2>
-    <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you with the Record Suspension application.</p>
+    <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you with the application.</p>
 
     <p><strong>For qualifying ex-offenders:</strong></p>
     <ul>
