--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
       background: url('compass.png') no-repeat center center fixed;
       background-size: cover;
       text-shadow: 1px 1px 3px #000;
-      text-align: center; /* This makes all text center-aligned by default */
+      position: relative;
+    }
+
+    .logo-container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+
+    .logo-container img {
+      height: 60px;
+      opacity: 0.9;
     }
 
     .overlay {
@@ -24,18 +35,17 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center; /* Center inner block elements */
+      align-items: center;
+      text-align: center;
+    }
+
+    h1, h2, p, ul, li {
+      text-align: center;
     }
 
     ul {
       list-style-type: disc;
       padding-left: 0;
-      text-align: center;
-    }
-
-    ul li {
-      display: list-item;
-      list-style-position: inside;
     }
 
     .contact {
@@ -50,10 +60,18 @@
   </style>
 </head>
 <body>
+  <div class="logo-container">
+    <img src="jhsm_logo.png" alt="John Howard Society Logo" />
+  </div>
+
   <div class="overlay">
     <h1>Record Suspension</h1>
     <h2>Previously known as a Pardon</h2>
-    <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you the process.</p>
+
+    <p>
+      The John Howard Society Miramichi has available a dedicated
+      <strong>"Navigator"</strong> to assist you with the Record Suspension application.
+    </p>
 
     <p><strong>For qualifying ex-offenders:</strong></p>
     <ul>
@@ -64,11 +82,4 @@
     </ul>
 
     <div class="contact">
-      <p><strong>Contact:</strong> Ed Rawlinson, Navigator</p>
-      <p>599 King George Hwy, Miramichi, NB E1V 1N9</p>
-      <p>Phone: 506-625-5609</p>
-      <p>Email: <a href="mailto:jerawlinson@gmail.com">jerawlinson@gmail.com</a></p>
-    </div>
-  </div>
-</body>
-</html>
+      <p><strong>Contact:</strong> Ed
