--- a/index.html
+++ b/index.html
@@ -12,24 +12,16 @@
       background: url('compass.png') no-repeat center center fixed;
       background-size: cover;
       text-shadow: 1px 1px 3px #000;
-      position: relative;
     }
 
-    .header-name {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      text-align: right;
-      font-size: 14px;
-      line-height: 1.3;
-      color: #fff;
-      text-shadow: 1px 1px 3px #000;
+    .logo-container {
+      text-align: center;
+      padding-top: 20px;
     }
 
-    .header-name strong {
-      font-size: 22px;
-      display: block;
-      color: #4aa3df;
+    .logo-container img {
+      max-width: 320px;
+      height: auto;
     }
 
     .overlay {
@@ -66,10 +58,9 @@
   </style>
 </head>
 <body>
-  <div class="header-name">
-    <strong>John Howard</strong>
-    THE JOHN HOWARD SOCIETY OF MIRAMICHI<br />
-    LA SOCIÉTÉ JOHN HOWARD DE MIRAMICHI
+
+  <div class="logo-container">
+    <img src="jhsm_logo.png" alt="John Howard Society of Miramichi Logo">
   </div>
 
   <div class="overlay">
@@ -91,10 +82,3 @@
 
     <div class="contact">
       <p><strong>Contact:</strong> Ed Rawlinson, Navigator</p>
-      <p>599 King George Hwy, Miramichi, NB E1V 1N9</p>
-      <p>Phone: 506-625-5609</p>
-      <p>Email: <a href="mailto:jerawlinson@gmail.com">jerawlinson@gmail.com</a></p>
-    </div>
-  </div>
-</body>
-</html>
