--- a/index.html
+++ b/index.html
@@ -82,3 +82,11 @@
 
     <div class="contact">
       <p><strong>Contact:</strong> Ed Rawlinson, Navigator</p>
+      <p>599 King George Hwy, Miramichi, NB E1V 1N9</p>
+      <p>Phone: 506-625-5609</p>
+      <p>Email: <a href="mailto:jerawlinson@gmail.com">jerawlinson@gmail.com</a></p>
+    </div>
+  </div>
+
+</body>
+</html>
