--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
       background: url('compass.png') no-repeat center center fixed;
       background-size: cover;
       text-shadow: 1px 1px 3px #000;
+      position: relative;
     }
 
-    .logo-container {
-      text-align: center;
-      padding-top: 20px;
+    .header-name {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      text-align: right;
+      font-size: 14px;
+      line-height: 1.3;
+      color: #fff;
+      text-shadow: 1px 1px 3px #000;
     }
 
-    .logo-container img {
-      max-width: 320px;
-      height: auto;
+    .header-name strong {
+      font-size: 22px;
+      display: block;
+      color: #4aa3df;
     }
 
     .overlay {
@@ -58,9 +66,10 @@
   </style>
 </head>
 <body>
-
-  <div class="logo-container">
-    <img src="jhsm_logo.png" alt="John Howard Society of Miramichi Logo">
+  <div class="header-name">
+    <strong>John Howard</strong>
+    THE JOHN HOWARD SOCIETY OF MIRAMICHI<br />
+    LA SOCIÉTÉ JOHN HOWARD DE MIRAMICHI
   </div>
 
   <div class="overlay">
@@ -87,6 +96,5 @@
       <p>Email: <a href="mailto:jerawlinson@gmail.com">jerawlinson@gmail.com</a></p>
     </div>
   </div>
-
 </body>
 </html>
