--- a/index.html
+++ b/index.html
@@ -12,24 +12,20 @@
       background: url('compass.png') no-repeat center center fixed;
       background-size: cover;
       text-shadow: 1px 1px 3px #000;
-      position: relative;
     }
 
-    .header-name {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      text-align: right;
-      font-size: 14px;
-      line-height: 1.3;
-      color: #fff;
-      text-shadow: 1px 1px 3px #000;
+    .text-logo {
+      text-align: center;
+      padding: 30px 20px 0 20px;
+      font-size: 1.2em;
+      line-height: 1.4;
     }
 
-    .header-name strong {
-      font-size: 22px;
+    .text-logo strong {
+      font-size: 2.5em;
+      color: #4593d0;
       display: block;
-      color: #4aa3df;
+      margin-bottom: 5px;
     }
 
     .overlay {
@@ -39,62 +35,4 @@
       margin: 0 auto;
       min-height: 100vh;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    h1, h2, p, ul, li {
-      text-align: center;
-    }
-
-    ul {
-      list-style-type: disc;
-      padding-left: 0;
-    }
-
-    .contact {
-      margin-top: 30px;
-      font-size: 1.1em;
-      line-height: 1.6;
-    }
-
-    a {
-      color: #aad4ff;
-    }
-  </style>
-</head>
-<body>
-  <div class="header-name">
-    <strong>John Howard</strong>
-    THE JOHN HOWARD SOCIETY OF MIRAMICHI<br />
-    LA SOCIÉTÉ JOHN HOWARD DE MIRAMICHI
-  </div>
-
-  <div class="overlay">
-    <h1>Record Suspension</h1>
-    <h2>Previously known as a Pardon</h2>
-
-    <p>
-      The John Howard Society Miramichi has available a dedicated
-      <strong>"Navigator"</strong> to assist you with the Record Suspension application.
-    </p>
-
-    <p><strong>For qualifying ex-offenders:</strong></p>
-    <ul>
-      <li>One-on-one assistance</li>
-      <li>Eligibility assessment</li>
-      <li>Cost-related supports</li>
-      <li>Help in both official languages</li>
-    </ul>
-
-    <div class="contact">
-      <p><strong>Contact:</strong> Ed Rawlinson, Navigator</p>
-      <p>599 King George Hwy, Miramichi, NB E1V 1N9</p>
-      <p>Phone: 506-625-5609</p>
-      <p>Email: <a href="mailto:jerawlinson@gmail.com">jerawlinson@gmail.com</a></p>
-    </div>
-  </div>
-</body>
-</html>
+      flex-direction: column
