--- a/index.html
+++ b/index.html
@@ -35,4 +35,19 @@
       margin: 0 auto;
       min-height: 100vh;
       display: flex;
-      flex-direction: column
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay">
+    <div class="text-logo">
+      <strong>John Howard</strong>
+      <strong>THE JOHN HOWARD SOCIETY OF MIRAMICHI</strong>
+      <strong>LA SOCIÉTÉ JOHN HOWARD DE MIRAMICHI</strong>
+    </div>
+  </div>
+</body>
+</html>
