--- a/index.html
+++ b/index.html
@@ -12,24 +12,7 @@
       background: url('compass.png') no-repeat center center fixed;
       background-size: cover;
       text-shadow: 1px 1px 3px #000;
-      position: relative;
-    }
-
-    .header-name {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      text-align: right;
-      font-size: 14px;
-      line-height: 1.3;
-      color: #fff;
-      text-shadow: 1px 1px 3px #000;
-    }
-
-    .header-name strong {
-      font-size: 22px;
-      display: block;
-      color: #4aa3df;
+      text-align: center; /* This makes all text center-aligned by default */
     }
 
     .overlay {
@@ -41,17 +24,18 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    h1, h2, p, ul, li {
-      text-align: center;
+      align-items: center; /* Center inner block elements */
     }
 
     ul {
       list-style-type: disc;
       padding-left: 0;
+      text-align: center;
+    }
+
+    ul li {
+      display: list-item;
+      list-style-position: inside;
     }
 
     .contact {
@@ -66,20 +50,10 @@
   </style>
 </head>
 <body>
-  <div class="header-name">
-    <strong>John Howard</strong>
-    THE JOHN HOWARD SOCIETY OF MIRAMICHI<br />
-    LA SOCIÉTÉ JOHN HOWARD DE MIRAMICHI
-  </div>
-
   <div class="overlay">
     <h1>Record Suspension</h1>
     <h2>Previously known as a Pardon</h2>
-
-    <p>
-      The John Howard Society Miramichi has available a dedicated
-      <strong>"Navigator"</strong> to assist you with the Record Suspension application.
-    </p>
+    <p>The John Howard Society Miramichi has available a dedicated <strong>"Navigator"</strong> to assist you with the Record Suspension application.</p>
 
     <p><strong>For qualifying ex-offenders:</strong></p>
     <ul>
