--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
       position: relative;
     }
 
-    .logo-container {
+    .header-name {
       position: absolute;
       top: 20px;
       right: 20px;
+      text-align: right;
+      font-size: 14px;
+      line-height: 1.3;
+      color: #fff;
+      text-shadow: 1px 1px 3px #000;
     }
 
-    .logo-container img {
-      height: 60px;
-      opacity: 0.9;
+    .header-name strong {
+      font-size: 22px;
+      display: block;
+      color: #4aa3df;
     }
 
     .overlay {
@@ -60,8 +66,10 @@
   </style>
 </head>
 <body>
-  <div class="logo-container">
-    <img src="jhsm_logo.png" alt="John Howard Society Logo" />
+  <div class="header-name">
+    <strong>John Howard</strong>
+    THE JOHN HOWARD SOCIETY OF MIRAMICHI<br />
+    LA SOCIÉTÉ JOHN HOWARD DE MIRAMICHI
   </div>
 
   <div class="overlay">
